added dynamic range evaluation

--- a/3DGrapher.html
+++ b/3DGrapher.html
@@ -24,8 +24,8 @@
         <label>xmax</label><input type="text" ng-init="xmax='1'" ng-model="xmax" required><br>
         <label>ymin</label><input type="text" ng-init="ymin='-1'" ng-model="ymin" required>
         <label>ymax</label><input type="text" ng-init="ymax='1'" ng-model="ymax" required><br>
-        <label>zmin</label><input type="text" ng-init="zmin='-2'" ng-model="zmin" required>
-        <label>zmax</label><input type="text" ng-init="zmax='2'" ng-model="zmax" required>
+        <label>zmin</label><input type="text" ng-init="zmin='auto'" ng-model="zmin" required>
+        <label>zmax</label><input type="text" ng-init="zmax='auto'" ng-model="zmax" required>
     </div>
     <input type="button" value="Graph" class="btn btn-primary" ng-click="graphFunction()">
 </div>
