--- a/3DGrapher.html
+++ b/3DGrapher.html
@@ -16,16 +16,16 @@
 
 <div id="container" ng-controller="graphAppController">
     <label>Function one</label>
-    <input type="text" ng-init="formula1='x^2+y^2'" ng-model="formula1" required><br>
+    <input type="text" ng-init="formula1='x^2+y^2'" ng-model="formula1" ng-keypress="keyPressed($event)" required><br>
     <label>Function two</label>
-    <input type="text" ng-model="formula2">
+    <input type="text" ng-model="formula2" ng-keypress="keyPressed($event)">
     <div id="minMax">
-        <label>xmin</label><input type="text" ng-init="xmin='-1'" ng-model="xmin" required>
-        <label>xmax</label><input type="text" ng-init="xmax='1'" ng-model="xmax" required><br>
-        <label>ymin</label><input type="text" ng-init="ymin='-1'" ng-model="ymin" required>
-        <label>ymax</label><input type="text" ng-init="ymax='1'" ng-model="ymax" required><br>
-        <label>zmin</label><input type="text" ng-init="zmin='-2'" ng-model="zmin" required>
-        <label>zmax</label><input type="text" ng-init="zmax='2'" ng-model="zmax" required>
+        <label>xmin</label><input type="text" ng-init="xmin='-1'" ng-model="xmin" ng-keypress="keyPressed($event)" required>
+        <label>xmax</label><input type="text" ng-init="xmax='1'" ng-model="xmax" ng-keypress="keyPressed($event)" required><br>
+        <label>ymin</label><input type="text" ng-init="ymin='-1'" ng-model="ymin" ng-keypress="keyPressed($event)" required>
+        <label>ymax</label><input type="text" ng-init="ymax='1'" ng-model="ymax" ng-keypress="keyPressed($event)" required><br>
+        <label>zmin</label><input type="text" ng-init="zmin='-2'" ng-model="zmin" ng-keypress="keyPressed($event)" required>
+        <label>zmax</label><input type="text" ng-init="zmax='2'" ng-model="zmax" ng-keypress="keyPressed($event)" required>
     </div>
     <input type="button" value="Graph" class="btn btn-primary" ng-click="graphFunction()"><br>
     <label ng-model="errorMessage"></label>
