started working on graphing intersections

--- a/3DGrapher.html
+++ b/3DGrapher.html
@@ -33,7 +33,7 @@
     </div>
 
     <!-- button input -->
-    <input type="button" value="Graph" class="btn btn-primary" ng-click="graphFunction()">
+    <input type="button" value="Graph" class="btn btn-primary" ng-click="graphAll()">
     <input type="button" value="Graph Intersect" class="btn btn-primary" ng-click="graphIntersection()"><br>
     <label ng-model="warning" ng-show="error" class="label label-warning">An error occurred: {{reason}}</label>
 
